tests/typecheck/should_fail/T9774.hs
module T9774 where

import Control.Exception

foo = putStrLn (assert True 'a')
